--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       WORDPRESS_DB_USER: abc
       WORDPRESS_DB_PASSWORD: 123456abc
       WORDPRESS_DB_NAME: abc
-    volumes:
+   # volumes:
       - wordpress:/var/www/html
 
   db:
@@ -23,5 +23,5 @@ services:
       MARIADB_USER: abc
       MARIADB_PASSWORD: 12356abc
       MARIADB_ROOT_PASSWORD: 123456abc
-    volumes:
+    # volumes:
       - db:/var/lib/mysql
